--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -316,39 +316,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "id": "dfbcbbd5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ta.momentum import RSIIndicator\n",
     "from ta.trend import MACD\n",
+    "import pandas as pd\n",
     "\n",
     "def preprocess_stock(df):\n",
-    "    df = df.copy()  \n",
+    "    df = df.copy()\n",
     "\n",
-    "    df[\"Target\"] = (df[\"Close\"].shift(-1) > df[\"Close\"]).astype(int) \n",
-    "    #Here the output is 1 if the next day's close price is greater than today's close price, else 0\n",
-    "\n",
-    "    df[\"RSI\"] = RSIIndicator(df[\"Close\"], window=14).rsi()  #first trading strategy\n",
-    "\n",
-    "    macd = MACD(df[\"Close\"])    # second trading strategy\n",
-    "    df[\"MACD\"] = macd.macd()\n",
-    "    df[\"MACD_Signal\"] = macd.macd_signal()\n",
-    "\n",
+    "    # --- Technical Indicators ---\n",
+    "    df[\"RSI\"] = RSIIndicator(df[\"Close\"], window=14).rsi()\n",
+    "    df[\"MACD\"] = MACD(df[\"Close\"]).macd()\n",
+    "    df[\"MACD_Signal\"] = MACD(df[\"Close\"]).macd_signal()\n",
     "    df[\"SMA_20\"] = df[\"Close\"].rolling(window=20).mean()\n",
+    "    df[\"SMA_50\"] = df[\"Close\"].rolling(window=50).mean()\n",
     "    df[\"EMA_20\"] = df[\"Close\"].ewm(span=20, adjust=False).mean()\n",
-    "\n",
     "    df[\"Volatility\"] = df[\"Close\"].rolling(window=10).std()\n",
+    "    df[\"Volume\"] = df[\"Volume\"]\n",
     "\n",
-    "    df = df.dropna()\n",
+    "    # --- Strategy Logic ---\n",
+    "    df[\"Buy_Signal\"] = (\n",
+    "        (df[\"RSI\"] < 30) &\n",
+    "        (df[\"SMA_20\"] > df[\"SMA_50\"]) &\n",
+    "        (df[\"SMA_20\"].shift(1) <= df[\"SMA_50\"].shift(1))\n",
+    "    ).astype(int)\n",
     "\n",
-    "    return df"
+    "    # --- Target for ML ---\n",
+    "    df[\"Target\"] = (df[\"Close\"].shift(-1) > df[\"Close\"]).astype(int)\n",
+    "\n",
+    "    return df.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "71f8d9bb",
    "metadata": {},
    "outputs": [
@@ -547,12 +552,12 @@
     "print(f\"Preprocessed data for {symbol_infy}\")\n",
     "data_infy = yf.Ticker(symbol_infy).history(period='5y')\n",
     "processed_infy = preprocess_stock(data_infy)\n",
-    "processed_infy.head()\n"
+    "processed_infy.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "48f042fd",
    "metadata": {},
    "outputs": [
@@ -749,7 +754,7 @@
    "source": [
     "symbol_reliance = 'RELIANCE.NS'\n",
     "print(f\"Preprocessed data for {symbol_reliance}\")\n",
-    "data_reliance = yf.Ticker(symbol_reliance).history(period='5y')\n",
+    "data_reliance = yf.Ticker(symbol_reliance).history(period='2y')\n",
     "processed_reliance = preprocess_stock(data_reliance)\n",
     "processed_reliance.head()"
    ]
