model fully trained

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1141,7 +1141,7 @@
    "id": "899f325b",
    "metadata": {},
    "source": [
-    "# MODEL TRAINING"
+    "# MODEL TRAINING (only on INFY.NS)"
    ]
   },
   {
@@ -1757,27 +1757,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "c26f797c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Target\n",
-      "1    0.5\n",
-      "0    0.5\n",
-      "Name: proportion, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(y_backtest.value_counts(normalize=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 73,
    "id": "c3d8f0c7",
    "metadata": {},
@@ -1880,14 +1859,6 @@
     "for feat, score in zip(features, importances):\n",
     "    print(f\"{feat}: {score:.3f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfe357eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
