--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "48e66d3f",
+   "metadata": {},
+   "source": [
+    "# Using Machine Learning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "41336dcf",
@@ -78,7 +86,7 @@
    "id": "9e961dde",
    "metadata": {},
    "source": [
-    "# DATA VISUALISATION\n"
+    "### DATA VISUALISATION\n"
    ]
   },
   {
@@ -311,7 +319,7 @@
    "id": "f79cfefc",
    "metadata": {},
    "source": [
-    "# PREPROCESSING THE DATA"
+    "### PREPROCESSING THE DATA"
    ]
   },
   {
@@ -964,14 +972,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "87caed02",
-   "metadata": {},
-   "source": [
-    "# VISUALISE THE PREPROCESSED DATA"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 67,
    "id": "eec7062a",
@@ -1141,7 +1141,7 @@
    "id": "899f325b",
    "metadata": {},
    "source": [
-    "# MODEL TRAINING (only on INFY.NS)"
+    "### MODEL TRAINING AND BACKTESTING (only on INFY.NS)"
    ]
   },
   {
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "id": "1e5fd145",
    "metadata": {},
    "outputs": [],
@@ -1814,16 +1814,8 @@
     "\n",
     "# Combine into DataFrame\n",
     "backtest_df = processed_infy.loc[X_backtest.index].copy()\n",
-    "backtest_df[\"ML_Prediction\"] = y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "id": "f9a23da2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "backtest_df[\"ML_Prediction\"] = y_pred\n",
+    "\n",
     "# Simulate ML-based trades\n",
     "backtest_df[\"Buy_Price\"] = backtest_df[\"Close\"].where(backtest_df[\"ML_Prediction\"] == 1)\n",
     "backtest_df[\"Sell_Price\"] = backtest_df[\"Close\"].shift(-1).where(backtest_df[\"ML_Prediction\"] == 1)\n",
