backtest on reliance.nf

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1192,7 +1192,7 @@
    "id": "899f325b",
    "metadata": {},
    "source": [
-    "### MODEL TRAINING AND BACKTESTING (only on INFY.NS)"
+    "### MODEL TRAINING AND BACKTESTING (INFY.NS)"
    ]
   },
   {
