backtest on hdfcbank.nf

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -2732,6 +2732,57 @@
     "print(f\"📈 Avg Profit: {round(avg_profit * 100, 2)}%\")\n",
     "print(f\"📉 Avg Loss: {round(avg_loss * 100, 2)}%\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f20fab4",
+   "metadata": {},
+   "source": [
+    "### MODEL TRAINING AND BACKTESTING (HDFCBANK.NS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "975f73b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Step 1: Prepare Data ===\n",
+    "symbol = 'HDFCBANK.NS'\n",
+    "data = yf.Ticker(symbol).history(period='5y')\n",
+    "processed_hdfcbank = preprocess_stock(data)\n",
+    "features = [\"RSI\", \"MACD\", \"MACD_Signal\", \"SMA_20\", \"EMA_20\", \"Volatility\"]\n",
+    "X = processed_hdfcbank[features]\n",
+    "y = processed_hdfcbank[\"Target\"]\n",
+    "\n",
+    "# === Step 2: Hyperparameter Tuning with TimeSeriesSplit ===\n",
+    "param_grid = {\n",
+    "    'n_estimators': [50, 100, 150],\n",
+    "    'max_depth': [2, 3, 4],\n",
+    "    'learning_rate': [0.01, 0.1, 0.2],\n",
+    "}\n",
+    "\n",
+    "grid = GridSearchCV(\n",
+    "    estimator=XGBClassifier(use_label_encoder=False, eval_metric='logloss', random_state=42),\n",
+    "    param_grid=param_grid,\n",
+    "    scoring='precision',\n",
+    "    cv=TimeSeriesSplit(n_splits=5),\n",
+    "    verbose=0,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "grid.fit(X, y)\n",
+    "best_model = grid.best_estimator_\n",
+    "print(\"Best Parameters:\", grid.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3a9d538",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
