backtest on hdfcbank.nf

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -13,7 +13,7 @@
    "id": "b2a27e71",
    "metadata": {},
    "source": [
-    "### Initialisation"
+    "## INITIALISATION\n"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "id": "9e961dde",
    "metadata": {},
    "source": [
-    "### DATA VISUALISATION\n"
+    "## DATA VISUALISATION\n"
    ]
   },
   {
@@ -328,7 +328,7 @@
    "id": "f79cfefc",
    "metadata": {},
    "source": [
-    "### PREPROCESSING THE DATA"
+    "## PREPROCESSING THE DATA"
    ]
   },
   {
@@ -1189,10 +1189,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e8d57a2",
+   "metadata": {},
+   "source": [
+    "## MODEL TRAINING AND BACKTESTING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "899f325b",
    "metadata": {},
    "source": [
-    "### MODEL TRAINING AND BACKTESTING (INFY.NS)"
+    "### INFY.NS"
    ]
   },
   {
@@ -1965,7 +1973,7 @@
    "id": "3bdfca1e",
    "metadata": {},
    "source": [
-    "### MODEL TRAINING AND BACKTESTING (RELIANCE.NS)"
+    "### RELIANCE.NS"
    ]
   },
   {
@@ -2738,7 +2746,7 @@
    "id": "8f20fab4",
    "metadata": {},
    "source": [
-    "### MODEL TRAINING AND BACKTESTING (HDFCBANK.NS)"
+    "### HDFCBANK.NS"
    ]
   },
   {
