--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -3496,6 +3496,35 @@
     "print(f\"📈 Avg Profit: {round(avg_profit * 100, 2)}%\")\n",
     "print(f\"📉 Avg Loss: {round(avg_loss * 100, 2)}%\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "447b624f",
+   "metadata": {},
+   "source": [
+    "## 🤖 Machine Learning Results Summary\n",
+    "\n",
+    "### 🔹 INFY.NS (Tech)\n",
+    "- Accuracy: 89.5%\n",
+    "- Precision: 90.2%\n",
+    "- Hit Ratio: 90%\n",
+    "- Cumulative Return: ✅ 48.8%\n",
+    "- Avg Profit: 0.84% | Avg Loss: -1.03%\n",
+    "\n",
+    "### 🔹 RELIANCE.NS (Energy)\n",
+    "- Accuracy: 73.4%\n",
+    "- Precision: 72.1%\n",
+    "- Hit Ratio: 59%\n",
+    "- Cumulative Return: ⚠️ 1.15%\n",
+    "- Avg Profit: 1.08% | Avg Loss: -1.74%\n",
+    "\n",
+    "### 🔹 HDFCBANK.NS (Finance)\n",
+    "- Accuracy: 94.4%\n",
+    "- Precision: 91.9%\n",
+    "- Hit Ratio: 57%\n",
+    "- Cumulative Return: ⚠️ 1.44%\n",
+    "- Avg Profit: 1.16% | Avg Loss: -0.88%"
+   ]
   }
  ],
  "metadata": {
