--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -3966,66 +3966,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 305,
    "id": "027170e6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'ML_Prediction'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/Desktop/Stock market project/venv/lib/python3.10/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3811\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32mpandas/_libs/index.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/index.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'ML_Prediction'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[303], line 22\u001b[0m\n\u001b[1;32m     12\u001b[0m     cumulative \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m trades[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrade_Return\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m.\u001b[39mprod() \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m {\n\u001b[1;32m     15\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrades\u001b[39m\u001b[38;5;124m\"\u001b[39m: total,\n\u001b[1;32m     16\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWin Ratio\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mround\u001b[39m(win_ratio, \u001b[38;5;241m2\u001b[39m),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCumulative Return\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mround\u001b[39m(cumulative \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m     20\u001b[0m     }\n\u001b[0;32m---> 22\u001b[0m ml_stats \u001b[38;5;241m=\u001b[39m \u001b[43mget_strategy_metrics\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf_recent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mML_Prediction\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m logic_stats \u001b[38;5;241m=\u001b[39m get_strategy_metrics(df_recent, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLogic_Signal\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m📊 RELIANCE (Last 6 Months) - ML vs Logic Comparison\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[303], line 2\u001b[0m, in \u001b[0;36mget_strategy_metrics\u001b[0;34m(df, pred_col)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mget_strategy_metrics\u001b[39m(df, pred_col):\n\u001b[0;32m----> 2\u001b[0m     trades \u001b[38;5;241m=\u001b[39m df[\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpred_col\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m      3\u001b[0m     trades[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrade_Return\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClose\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mpct_change()\u001b[38;5;241m.\u001b[39mshift(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      4\u001b[0m     trades\u001b[38;5;241m.\u001b[39mdropna(subset\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrade_Return\u001b[39m\u001b[38;5;124m\"\u001b[39m], inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "File \u001b[0;32m~/Desktop/Stock market project/venv/lib/python3.10/site-packages/pandas/core/frame.py:4107\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4105\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4106\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4107\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4108\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4109\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/Desktop/Stock market project/venv/lib/python3.10/site-packages/pandas/core/indexes/base.py:3819\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3815\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3816\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3817\u001b[0m     ):\n\u001b[1;32m   3818\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3819\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3820\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3821\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3822\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3823\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3824\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'ML_Prediction'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📅 RELIANCE (Last 6 Months) - Days Both Agreed: 0\n",
+      "✅ Win Rate: 0%\n",
+      "💰 Avg Return: 0%\n"
      ]
     }
    ],
    "source": [
-    "def get_strategy_metrics(df, pred_col):\n",
-    "    trades = df[df[pred_col] == 1].copy()\n",
-    "    trades[\"Trade_Return\"] = df[\"Close\"].pct_change().shift(-1)\n",
-    "    trades.dropna(subset=[\"Trade_Return\"], inplace=True)\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import numpy as np\n",
     "\n",
-    "    total = len(trades)\n",
-    "    wins = (trades[\"Trade_Return\"] > 0).sum()\n",
-    "    losses = total - wins\n",
-    "    win_ratio = wins / total if total > 0 else 0\n",
-    "    avg_profit = trades[trades[\"Trade_Return\"] > 0][\"Trade_Return\"].mean()\n",
-    "    avg_loss = trades[trades[\"Trade_Return\"] <= 0][\"Trade_Return\"].mean()\n",
-    "    cumulative = (1 + trades[\"Trade_Return\"]).prod() - 1\n",
+    "# Make predictions for last 6 months using trained model\n",
+    "X_recent = X.loc[df_recent.index]\n",
+    "df_recent[\"ML_Prediction\"] = best_model.predict(X_recent)\n",
     "\n",
-    "    return {\n",
-    "        \"Trades\": total,\n",
-    "        \"Win Ratio\": round(win_ratio, 2),\n",
-    "        \"Avg Profit\": round(avg_profit * 100, 2) if not np.isnan(avg_profit) else 0,\n",
-    "        \"Avg Loss\": round(avg_loss * 100, 2) if not np.isnan(avg_loss) else 0,\n",
-    "        \"Cumulative Return\": round(cumulative * 100, 2)\n",
-    "    }\n",
+    "# Compare: both strategies agree on the same day\n",
+    "agreed_trades = df_recent[\n",
+    "    (df_recent[\"Buy_Signal\"] == 1) & (df_recent[\"ML_Prediction\"] == 1)\n",
+    "].copy()\n",
     "\n",
-    "ml_stats = get_strategy_metrics(df_recent, \"ML_Prediction\")\n",
-    "logic_stats = get_strategy_metrics(df_recent, \"Logic_Signal\")\n",
+    "# Calculate returns for agreed trades\n",
+    "agreed_trades[\"Trade_Return\"] = agreed_trades[\"Close\"].pct_change().shift(-1)\n",
+    "agreed_trades = agreed_trades.dropna(subset=[\"Trade_Return\"])\n",
     "\n",
-    "print(\"\\n📊 RELIANCE (Last 6 Months) - ML vs Logic Comparison\")\n",
-    "print(\"Machine Learning Strategy:\")\n",
-    "for k, v in ml_stats.items():\n",
-    "    print(f\"  {k}: {v}\")\n",
+    "# Metrics\n",
+    "num_agreed = len(agreed_trades)\n",
+    "profitable = (agreed_trades[\"Trade_Return\"] > 0).sum()\n",
+    "win_rate = profitable / num_agreed if num_agreed > 0 else 0\n",
+    "avg_return = agreed_trades[\"Trade_Return\"].mean() if num_agreed > 0 else 0\n",
     "\n",
-    "print(\"\\nLogic Strategy:\")\n",
-    "for k, v in logic_stats.items():\n",
-    "    print(f\"  {k}: {v}\")"
+    "# 📊 Print results\n",
+    "print(f\"📅 RELIANCE (Last 6 Months) - Days Both Agreed: {num_agreed}\")\n",
+    "print(f\"✅ Win Rate: {round(win_rate * 100, 2)}%\")\n",
+    "print(f\"💰 Avg Return: {round(avg_return * 100, 2)}%\")"
    ]
   },
   {
