--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 330,
    "id": "85fd7202",
    "metadata": {},
    "outputs": [
@@ -1254,80 +1254,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 44.35%\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "=== Data Validation ===\n",
-      "Train shape: (1083, 14)\n",
-      "Test shape: (124, 14)\n",
+      "           0       0.84      0.97      0.90        92\n",
+      "           1       0.25      0.06      0.09        18\n",
       "\n",
-      "Class balance:\n",
-      "Target\n",
-      "1    0.5\n",
-      "0    0.5\n",
-      "Name: proportion, dtype: float64\n"
+      "    accuracy                           0.82       110\n",
+      "   macro avg       0.54      0.51      0.49       110\n",
+      "weighted avg       0.74      0.82      0.77       110\n",
+      "\n",
+      "Feature importance:\n",
+      "Volume_Spike         0.180941\n",
+      "Price_Change_5d      0.149323\n",
+      "volume_obv           0.137041\n",
+      "trend_macd_signal    0.117377\n",
+      "momentum_rsi         0.103046\n",
+      "volatility_atr       0.098103\n",
+      "trend_ema_fast       0.083855\n",
+      "trend_macd           0.073229\n",
+      "trend_sma_fast       0.057084\n",
+      "dtype: float64\n"
      ]
     }
    ],
    "source": [
+    "features = [\"RSI\", \"MACD\", \"MACD_Signal\", \"SMA_20\", \"EMA_20\", \"Volatility\"]\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import yfinance as yf\n",
-    "from ta.momentum import RSIIndicator\n",
-    "from ta.trend import MACD\n",
-    "from xgboost import XGBClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from ta import add_all_ta_features\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
-    "# 1. PROPERLY DEFINED FEATURES\n",
-    "features = [\"RSI\", \"MACD\", \"MACD_Signal\", \"SMA_20\", \"EMA_20\", \"Volatility\"]\n",
-    "\n",
+    "# 1. ENHANCED FEATURE ENGINEERING\n",
     "def prepare_data(symbol):\n",
-    "    data = yf.Ticker(symbol).history(period='5y')\n",
+    "    data = yf.Ticker(symbol).history(period='5y', interval='1d')\n",
     "    \n",
-    "    # CORRECT TARGET DEFINITION (Next day return)\n",
-    "    data[\"Target\"] = (data[\"Close\"].shift(-1) > data[\"Close\"]).astype(int)\n",
+    "    # Add ALL TA features automatically\n",
+    "    data = add_all_ta_features(data, open=\"Open\", high=\"High\", \n",
+    "                             low=\"Low\", close=\"Close\", volume=\"Volume\")\n",
     "    \n",
-    "    # SAFE FEATURE CALCULATION (No future leakage)\n",
-    "    data[\"RSI\"] = RSIIndicator(data[\"Close\"], window=14).rsi()\n",
-    "    macd = MACD(data[\"Close\"])\n",
-    "    data[\"MACD\"] = macd.macd()\n",
-    "    data[\"MACD_Signal\"] = macd.macd_signal()\n",
-    "    data[\"SMA_20\"] = data[\"Close\"].rolling(20).mean()\n",
-    "    data[\"EMA_20\"] = data[\"Close\"].ewm(span=20, adjust=False).mean()\n",
-    "    data[\"Volatility\"] = data[\"Close\"].rolling(10).std()\n",
+    "    # Custom features\n",
+    "    data['Price_Change_5d'] = data['Close'].pct_change(5)\n",
+    "    data['Volume_Spike'] = data['Volume'] / data['Volume'].rolling(20).mean()\n",
     "    \n",
-    "    # TEMPORAL SPLIT (No shuffling)\n",
-    "    cutoff = data.index.max() - pd.DateOffset(months=6)\n",
-    "    train = data[data.index < cutoff].dropna()\n",
-    "    test = data[data.index >= cutoff].dropna()\n",
+    "    # Target: Next day return +1% threshold\n",
+    "    data['Target'] = (data['Close'].pct_change().shift(-1) > 0.01).astype(int)\n",
     "    \n",
+    "    # Remove columns with >30% NaN and remaining NaNs\n",
+    "    data = data.dropna(axis=1, thresh=len(data)*0.7).dropna()\n",
+    "    \n",
+    "    return data\n",
+    "\n",
+    "# 2. TIME-AWARE FEATURE SELECTION\n",
+    "def select_features(data):\n",
+    "    features = [\n",
+    "        'momentum_rsi', 'trend_macd', 'trend_macd_signal',\n",
+    "        'trend_sma_fast', 'trend_ema_fast', 'volatility_atr',\n",
+    "        'volume_obv', 'Price_Change_5d', 'Volume_Spike'\n",
+    "    ]\n",
+    "    return [f for f in features if f in data.columns]\n",
+    "\n",
+    "# 3. TEMPORAL MODEL VALIDATION\n",
+    "def temporal_train_test_split(data, test_months=6):\n",
+    "    cutoff = data.index.max() - pd.DateOffset(months=test_months)\n",
+    "    train = data[data.index < cutoff]\n",
+    "    test = data[data.index >= cutoff]\n",
     "    return train, test\n",
     "\n",
-    "# 2. TRAIN MODEL WITH OPTIMAL PARAMS\n",
-    "train, test = prepare_data(\"INFY.NS\")\n",
+    "# 4. MAIN EXECUTION\n",
+    "data = prepare_data('INFY.NS')\n",
+    "features = select_features(data)\n",
+    "train, test = temporal_train_test_split(data)\n",
     "\n",
-    "model = XGBClassifier(\n",
-    "    learning_rate=0.1,       # Increased from 0.05\n",
-    "    max_depth=4,            # Slightly deeper\n",
-    "    n_estimators=150,\n",
-    "    subsample=0.9,\n",
-    "    colsample_bytree=0.8,\n",
-    "    eval_metric='logloss',\n",
+    "model = GradientBoostingClassifier(\n",
+    "    n_estimators=200,\n",
+    "    learning_rate=0.05,\n",
+    "    max_depth=4,\n",
+    "    min_samples_leaf=20,\n",
     "    random_state=42\n",
     ")\n",
     "\n",
-    "model.fit(train[features], train[\"Target\"])\n",
-    "\n",
-    "# 3. EVALUATE\n",
+    "model.fit(train[features], train['Target'])\n",
     "y_pred = model.predict(test[features])\n",
-    "accuracy = accuracy_score(test[\"Target\"], y_pred)\n",
-    "print(f\"Accuracy: {accuracy:.2%}\")\n",
     "\n",
-    "# 4. SANITY CHECKS\n",
-    "print(\"\\n=== Data Validation ===\")\n",
-    "print(f\"Train shape: {train.shape}\")\n",
-    "print(f\"Test shape: {test.shape}\")\n",
-    "print(\"\\nClass balance:\")\n",
-    "print(test[\"Target\"].value_counts(normalize=True))"
+    "print(classification_report(test['Target'], y_pred))\n",
+    "print(f\"Feature importance:\\n{pd.Series(model.feature_importances_, index=features).sort_values(ascending=False)}\")\n"
    ]
   },
   {
