--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": null,
    "id": "85fd7202",
    "metadata": {},
    "outputs": [
@@ -1254,93 +1254,127 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=== Running Analysis ===\n",
+      "\n",
+      "Train samples: 950 (51.68% positive)\n",
+      "Test samples: 238 (51.68% positive)\n",
+      "\n",
+      "=== Model Performance ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.97      0.90        92\n",
-      "           1       0.25      0.06      0.09        18\n",
+      "           0       0.46      0.68      0.55       115\n",
+      "           1       0.46      0.25      0.32       123\n",
       "\n",
-      "    accuracy                           0.82       110\n",
-      "   macro avg       0.54      0.51      0.49       110\n",
-      "weighted avg       0.74      0.82      0.77       110\n",
+      "    accuracy                           0.46       238\n",
+      "   macro avg       0.46      0.47      0.44       238\n",
+      "weighted avg       0.46      0.46      0.43       238\n",
       "\n",
-      "Feature importance:\n",
-      "Volume_Spike         0.180941\n",
-      "Price_Change_5d      0.149323\n",
-      "volume_obv           0.137041\n",
-      "trend_macd_signal    0.117377\n",
-      "momentum_rsi         0.103046\n",
-      "volatility_atr       0.098103\n",
-      "trend_ema_fast       0.083855\n",
-      "trend_macd           0.073229\n",
-      "trend_sma_fast       0.057084\n",
+      "\n",
+      "=== Feature Importance ===\n",
+      "MACD_Diff          0.207202\n",
+      "Price_Change_3d    0.160148\n",
+      "MACD               0.146390\n",
+      "EMA_20             0.131519\n",
+      "RSI                0.122086\n",
+      "Volatility         0.117473\n",
+      "SMA_20             0.115182\n",
       "dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "features = [\"RSI\", \"MACD\", \"MACD_Signal\", \"SMA_20\", \"EMA_20\", \"Volatility\"]\n",
-    "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import yfinance as yf\n",
-    "from ta import add_all_ta_features\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "# 1. ENHANCED FEATURE ENGINEERING\n",
-    "def prepare_data(symbol):\n",
-    "    data = yf.Ticker(symbol).history(period='5y', interval='1d')\n",
-    "    \n",
-    "    # Add ALL TA features automatically\n",
-    "    data = add_all_ta_features(data, open=\"Open\", high=\"High\", \n",
-    "                             low=\"Low\", close=\"Close\", volume=\"Volume\")\n",
-    "    \n",
-    "    # Custom features\n",
-    "    data['Price_Change_5d'] = data['Close'].pct_change(5)\n",
-    "    data['Volume_Spike'] = data['Volume'] / data['Volume'].rolling(20).mean()\n",
-    "    \n",
-    "    # Target: Next day return +1% threshold\n",
-    "    data['Target'] = (data['Close'].pct_change().shift(-1) > 0.01).astype(int)\n",
-    "    \n",
-    "    # Remove columns with >30% NaN and remaining NaNs\n",
-    "    data = data.dropna(axis=1, thresh=len(data)*0.7).dropna()\n",
-    "    \n",
-    "    return data\n",
+    "def align_data(features_df, target_series):\n",
+    "    \"\"\"Ensure features and targets have matching indices\"\"\"\n",
+    "    aligned_df = features_df.join(target_series, how='inner')\n",
+    "    return aligned_df.drop(columns=['Target']), aligned_df['Target']\n",
     "\n",
-    "# 2. TIME-AWARE FEATURE SELECTION\n",
-    "def select_features(data):\n",
-    "    features = [\n",
-    "        'momentum_rsi', 'trend_macd', 'trend_macd_signal',\n",
-    "        'trend_sma_fast', 'trend_ema_fast', 'volatility_atr',\n",
-    "        'volume_obv', 'Price_Change_5d', 'Volume_Spike'\n",
-    "    ]\n",
-    "    return [f for f in features if f in data.columns]\n",
+    "def run_analysis(data):\n",
+    "    \"\"\"Complete error-proof analysis pipeline\"\"\"\n",
+    "    try:\n",
+    "        # 1. Ensure we have required columns\n",
+    "        required_cols = ['Close', 'RSI', 'MACD', 'MACD_Signal', 'SMA_20', 'EMA_20', 'Volatility']\n",
+    "        missing = [col for col in required_cols if col not in data.columns]\n",
+    "        if missing:\n",
+    "            raise ValueError(f\"Missing columns: {missing}\")\n",
+    "        \n",
+    "        # 2. Create target and features\n",
+    "        data = data.copy()\n",
+    "        data['Target'] = (data['Close'].shift(-1) > data['Close']).astype(int)\n",
+    "        data['MACD_Diff'] = data['MACD'] - data['MACD_Signal']\n",
+    "        data['Price_Change_3d'] = data['Close'].pct_change(3)\n",
+    "        \n",
+    "        # 3. Remove NA values\n",
+    "        data = data.dropna(subset=required_cols + ['Target', 'MACD_Diff', 'Price_Change_3d'])\n",
+    "        \n",
+    "        # 4. Prepare features\n",
+    "        features = ['RSI', 'MACD', 'MACD_Diff', 'SMA_20', 'EMA_20', 'Volatility', 'Price_Change_3d']\n",
+    "        features_df = data[features]\n",
+    "        \n",
+    "        # 5. Temporal split with alignment\n",
+    "        split_idx = int(len(data)*0.8)\n",
+    "        train_features, test_features = features_df.iloc[:split_idx], features_df.iloc[split_idx:]\n",
+    "        train_target, test_target = data['Target'].iloc[:split_idx], data['Target'].iloc[split_idx:]\n",
+    "        \n",
+    "        # Align indices\n",
+    "        X_train, y_train = align_data(train_features, train_target)\n",
+    "        X_test, y_test = align_data(test_features, test_target)\n",
+    "        \n",
+    "        print(f\"\\nTrain samples: {len(X_train)} ({y_train.mean():.2%} positive)\")\n",
+    "        print(f\"Test samples: {len(X_test)} ({y_test.mean():.2%} positive)\")\n",
+    "        \n",
+    "        # 6. Train model\n",
+    "        model = GradientBoostingClassifier(\n",
+    "            n_estimators=150,\n",
+    "            learning_rate=0.1,\n",
+    "            max_depth=3,\n",
+    "            min_samples_leaf=20,\n",
+    "            random_state=42\n",
+    "        )\n",
+    "        model.fit(X_train, y_train)\n",
+    "        \n",
+    "        # 7. Evaluate\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        print(\"\\n=== Model Performance ===\")\n",
+    "        print(classification_report(y_test, y_pred))\n",
+    "        \n",
+    "        print(\"\\n=== Feature Importance ===\")\n",
+    "        print(pd.Series(model.feature_importances_, index=features)\n",
+    "            .sort_values(ascending=False))\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"\\nError: {str(e)}\")\n",
+    "        print(\"\\nDebugging Checklist:\")\n",
+    "        print(\"1. Verify all required columns exist\")\n",
+    "        print(\"2. Check data contains at least 200 rows\")\n",
+    "        print(\"3. Ensure no NaN values in key columns\")\n",
+    "        print(\"4. Confirm date index is continuous\")\n",
     "\n",
-    "# 3. TEMPORAL MODEL VALIDATION\n",
-    "def temporal_train_test_split(data, test_months=6):\n",
-    "    cutoff = data.index.max() - pd.DateOffset(months=test_months)\n",
-    "    train = data[data.index < cutoff]\n",
-    "    test = data[data.index >= cutoff]\n",
-    "    return train, test\n",
-    "\n",
-    "# 4. MAIN EXECUTION\n",
-    "data = prepare_data('INFY.NS')\n",
-    "features = select_features(data)\n",
-    "train, test = temporal_train_test_split(data)\n",
-    "\n",
-    "model = GradientBoostingClassifier(\n",
-    "    n_estimators=200,\n",
-    "    learning_rate=0.05,\n",
-    "    max_depth=4,\n",
-    "    min_samples_leaf=20,\n",
-    "    random_state=42\n",
-    ")\n",
-    "\n",
-    "model.fit(train[features], train['Target'])\n",
-    "y_pred = model.predict(test[features])\n",
-    "\n",
-    "print(classification_report(test['Target'], y_pred))\n",
-    "print(f\"Feature importance:\\n{pd.Series(model.feature_importances_, index=features).sort_values(ascending=False)}\")\n"
+    "# Run analysis on your preprocessed data\n",
+    "print(\"=== Running Analysis ===\")\n",
+    "run_analysis(processed_infy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "id": "74b06efc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data from NaT to NaT\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Data from {data.index.min()} to {data.index.max()}\")\n",
+    "# Ensure you have enough market variability"
    ]
   },
   {
