--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -619,7 +619,7 @@
    "id": "9e8d57a2",
    "metadata": {},
    "source": [
-    "## Agreement Analysis"
+    "## AGREEMENT ANALYSIS"
    ]
   },
   {
