ML MODEL TRAINING

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -615,6 +615,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0966d448",
+   "metadata": {},
+   "source": [
+    "### INFY.NS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 350,
    "id": "80806b3c",
@@ -1309,6 +1317,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c586a15",
+   "metadata": {},
+   "source": [
+    "### RELIANCE.NS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 351,
    "id": "43983225",
@@ -1998,6 +2014,14 @@
     "        print(\"Error: Training failed for RELIANCE.NS.\")\n",
     "else:\n",
     "    print(\"Error: Processed data for RELIANCE.NS not found.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f351c5bf",
+   "metadata": {},
+   "source": [
+    "### HDFCBANK.NS"
    ]
   },
   {
